# gr-leo

./: .astylerc  .gitignore  .gitlab-ci.yml  .gitlab-ci.yml.orig  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  LICENSE  MANIFEST.md  MANIFEST.yml  README.md
.ci_support/: linux_64_numpy1.19python3.7.____cpython.yaml  linux_64_numpy1.19python3.8.____cpython.yaml  linux_64_numpy1.19python3.9.____cpython.yaml  linux_64_numpy1.20python3.7.____cpython.yaml  linux_64_numpy1.20python3.8.____cpython.yaml  linux_64_numpy1.20python3.9.____cpython.yaml  linux_64_numpy1.21python3.10.____cpython.yaml  linux_64_numpy1.22python3.10.____cpython.yaml  linux_64_numpy1.22python3.8.____cpython.yaml  linux_64_numpy1.22python3.9.____cpython.yaml  linux_64_numpy1.23python3.11.____cpython.yaml  linux_64_python3.10.____cpython.yaml  linux_64_python3.8.____cpython.yaml  linux_64_python3.9.____cpython.yaml  linux_aarch64_numpy1.19python3.7.____cpython.yaml  linux_aarch64_numpy1.19python3.8.____cpython.yaml  linux_aarch64_numpy1.19python3.9.____cpython.yaml  linux_aarch64_numpy1.20python3.7.____cpython.yaml  linux_aarch64_numpy1.20python3.8.____cpython.yaml  linux_aarch64_numpy1.20python3.9.____cpython.yaml  linux_aarch64_numpy1.21python3.10.____cpython.yaml  linux_aarch64_numpy1.22python3.10.____cpython.yaml  linux_aarch64_numpy1.22python3.8.____cpython.yaml  linux_aarch64_numpy1.22python3.9.____cpython.yaml  linux_aarch64_numpy1.23python3.11.____cpython.yaml  linux_aarch64_python3.10.____cpython.yaml  linux_aarch64_python3.8.____cpython.yaml  linux_aarch64_python3.9.____cpython.yaml  linux_ppc64le_numpy1.19python3.7.____cpython.yaml  linux_ppc64le_numpy1.19python3.8.____cpython.yaml  linux_ppc64le_numpy1.19python3.9.____cpython.yaml  linux_ppc64le_numpy1.20python3.7.____cpython.yaml  linux_ppc64le_numpy1.20python3.8.____cpython.yaml  linux_ppc64le_numpy1.20python3.9.____cpython.yaml  linux_ppc64le_numpy1.21python3.10.____cpython.yaml  linux_ppc64le_numpy1.22python3.10.____cpython.yaml  linux_ppc64le_numpy1.22python3.8.____cpython.yaml  linux_ppc64le_numpy1.22python3.9.____cpython.yaml  linux_ppc64le_numpy1.23python3.11.____cpython.yaml  linux_ppc64le_python3.10.____cpython.yaml  (+42 more)
.conda/: README.md  conda-forge.yml
.conda/recipe/: bld.bat  build.sh  conda_build_config.yaml  meta.yaml
.github/workflows/: conda-build.yml
.scripts/: build_steps.sh  run_osx_build.sh  run_win_build.bat
apps/: CMakeLists.txt  leo_passpredict.py
cmake/Modules/: FindSGP4.cmake  GrMiscUtils.cmake  GrPlatform.cmake  GrPython.cmake  GrSwig.cmake  GrTest.cmake  gnuradio-leoConfig.cmake  leoConfig.cmake
data/: CMakeLists.txt
data/ITU_RREC_P1511/: TOPOLAT.txt  TOPOLON.txt  TOPO_0DOT5.txt
docs/: CMakeLists.txt  README.leo
docs/doxygen/: CMakeLists.txt  Doxyfile.in  swig_doc.py
docs/doxygen/doxyxml/: __init__.py  base.py  doxyindex.py  text.py
docs/doxygen/other/: build_guide.dox  group_defs.dox  main_page.dox  usage.dox
examples/: CMakeLists.txt  leo_channel.grc  leo_channel.py  upsat_leo.grc  upsat_leo.py  upsat_leo_nogui.grc
grc/: CMakeLists.txt  leo_block.tree.yml  leo_block_tree.xml  leo_channel_model.block.yml  leo_channel_model.xml  variable_antenna.block.yml  variable_antenna.xml  variable_leo_model_def.block.yml  variable_leo_model_def.block2.yml  variable_leo_model_def.xml  variable_satellite.block.yml  variable_satellite.xml  variable_test_model_def.xml  variable_tracker.block.yml  variable_tracker.xml
hooks/: pre-commit.txt
include/gnuradio/leo/: CMakeLists.txt  antenna_pointing_loss.h  api.h  atmospheric_gases_itu.h  atmospheric_gases_regression.h  log.h  (+21 more)
include/leo/: CMakeLists.txt  antenna_pointing_loss.h  api.h  atmosphere.h  atmospheric_gases_itu.h  atmospheric_gases_regression.h  channel_model.h  custom_antenna.h  dipole_antenna.h  free_space_path_loss.h  generic_antenna.h  generic_attenuation.h  generic_model.h  generic_noise.h  helix_antenna.h  leo_channel_model.h  leo_model.h  link_margin.h  log.h  monopole_antenna.h  parabolic_reflector_antenna.h  precipation_itu.h  precipitation_itu.h  quadrifilar_helix_antenna.h  sat_tracker.h  satellite.h  test_model.h  tracker.h  white_gaussian_noise.h  yagi_antenna.h
lib/: CMakeLists.txt  antenna_pointing_loss_impl.cc  antenna_pointing_loss_impl.h  atmosphere.cc  atmospheric_gases_itu_impl.cc  atmospheric_gases_itu_impl.h  atmospheric_gases_regression_impl.cc  atmospheric_gases_regression_impl.h  channel_model_impl.cc  channel_model_impl.h  custom_antenna_impl.cc  custom_antenna_impl.h  dipole_antenna_impl.cc  dipole_antenna_impl.h  free_space_path_loss_impl.cc  free_space_path_loss_impl.h  generic_antenna.cc  generic_attenuation.cc  generic_model.cc  generic_noise.cc  helix_antenna_impl.cc  helix_antenna_impl.h  leo_channel_model_impl.cc  leo_channel_model_impl.h  leo_model_impl.cc  leo_model_impl.h  link_margin.cc  monopole_antenna_impl.cc  monopole_antenna_impl.h  parabolic_reflector_antenna_impl.cc  parabolic_reflector_antenna_impl.h  precipation_itu_impl.cc  precipation_itu_impl.h  precipitation_itu_impl.cc  precipitation_itu_impl.h  qa_leo.cc  qa_leo.h  quadrifilar_helix_antenna_impl.cc  quadrifilar_helix_antenna_impl.h  sat_tracker.cc  (+8 more)
lib/utils/: datetime.cc  helper.cc
libsgp4/: CMakeLists.txt
python/: CMakeLists.txt  __init__.py  build_utils.py  build_utils_codes.py
python/leo/: CMakeLists.txt  __init__.py
python/leo/bindings/: CMakeLists.txt  antenna_pointing_loss_python.cc  atmospheric_gases_itu_python.cc  atmospheric_gases_regression_python.cc  channel_model_python.cc  custom_antenna_python.cc  dipole_antenna_python.cc  free_space_path_loss_python.cc  generic_antenna_python.cc  generic_attenuation_python.cc  generic_model_python.cc  generic_noise_python.cc  helix_antenna_python.cc  leo_model_python.cc  leo_types_python.cc  link_margin_python.cc  monopole_antenna_python.cc  parabolic_reflector_antenna_python.cc  precipitation_itu_python.cc  python_bindings.cc  quadrifilar_helix_antenna_python.cc  satellite_python.cc  tracker_python.cc  white_gaussian_noise_python.cc  yagi_antenna_python.cc
swig/: CMakeLists.txt  leo_swig.i
(+3 files in other folders)
